# talk-booking

./: .gitlab-ci.yml
.circleci/: config.yml
ci_cd/python/: Dockerfile
ci_cd/scripts/: get_changed_files.sh
services/talk-booking/: .flake8  pyproject.toml
services/talk-booking/tests/integration/test_web_app/: test_app.py
services/talk-booking/web_app/: app.py
