[tool.poetry]
name = "talk-booking"
version = "0.1.0"
description = ""
authors = ["Keith Riordan <keith.riordan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
